Make header smaller on mobile to avoid longer words falling on second line

--- a/css/style.css
+++ b/css/style.css
@@ -330,7 +330,7 @@ body.yellow {
     }
 
     .main .header .swedish-word {
-        font-size: 35px;
+        font-size: 25px;
     }
 
     .main .header .subtext {
